refactor build, java 8